# aisk

./: .gitignore  README.md  pyproject.toml
aisk/: config.py  init.py  main.py  model.py
